# websocket-through-rabbitmq

./: README.md
apps/web-chat/: package-lock.json  package.json
apps/web-chat/src/common/api/: fetcher.ts
apps/web-chat/src/layouts/chat/: ChatLayout.tsx
apps/web-chat/src/modules/chat/: ChatContainer.tsx
apps/web-chat/src/modules/chat/api/: getRooms.ts  urls.ts
apps/web-chat/src/modules/chat/rooms/: RoomsContainer.tsx  RoomsView.tsx
apps/web-chat/src/modules/chat/types/: RoomDTO.ts
apps/web-chat/src/modules/user/: ChooseUserForm.tsx
apps/web-chat/src/modules/user/context/: ChosenUserContext.tsx
apps/web-chat/src/modules/user/types/: ChosenUser.ts
apps/web-chat/src/pages/: _app.tsx  index.tsx
apps/web-chat/src/pages/chat/: index.tsx
apps/web-chat/src/styles/: globals.css
apps/websocket-service/: .gitlab-ci.yml  Dockerfile  mypy.ini  pyproject.toml
apps/websocket-service/src/: app.py  logging_config.json  main.py  settings.py
apps/websocket-service/src/connections/: db_connection.py
apps/websocket-service/src/modules/websocket/adapters/namespaces/: chat.py
apps/websocket-service/tests/ci/: Dockerfile  docker-compose.yml  entrypoint.sh
