[tool.poetry]
name = "bpl-websocket-service"
version = "0.1.0"
description = ""
authors = ["Vemco"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
dependency-injector = "4.41.0"
pyinstaller = "5.7.0"
pytest = "7.2.1"
loguru = "0.6.0"
python = "==3.11.6"
six = "1.16.0"
sqlalchemy = "1.4.46"
httpx = "0.24.0"
pytest-httpx = "0.22.0"
uvicorn = "0.22.0"
pyhumps = "3.8.0"
python-socketio = "5.6.0"
python-jose = { extras = ["cryptography"], version = "3.3.0" }
aio-pika = "9.2.2"
pydantic = {extras = ["all"], version = "^2.7.0"}
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.0.252"
black = "23.1.0"
isort = "5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "poetry.lock"
]
